fix:   index.html changed git name feat:   add align

--- a/style.css
+++ b/style.css
@@ -1,3 +1,3 @@
-body {
-    color: white;
+main {
+    text-align: center;
 }
